--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-markdown": "^9.0.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.0",
+    "remark-gfm": "^4.0.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
