--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/tinymce-react": "^5.0.1",
     "date-fns": "^3.6.0",
+    "html-react-parser": "^5.1.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
