--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@tinymce/tinymce-react": "^5.0.1",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "date-fns": "^3.6.0",
     "html-react-parser": "^5.1.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-markdown": "^9.0.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.0",
