--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.0",
     "remark-gfm": "^4.0.0",
+    "turndown": "^7.2.0",
     "uuidv4": "^6.2.13"
   },
   "devDependencies": {
@@ -31,6 +32,7 @@
     "@testing-library/user-event": "^14.5.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/turndown": "^5.0.4",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
